11주차 1차 배포 (#92)
* [Shelter] 쉼터 사진 저장 구현 (#46)

* 데이터베이스 설정 ddl-auto를 update로 변경 (#48)

* 특수문자를 읽을 수 있게 수정 (#50)

* fix: 데이터베이스 설정 ddl-auto를 update로 변경

* fix: 특수문자를 읽을 수 있게 수정

* fix: DB 스키마 생성 오류 해결을 위한 Hibernate Dialect 설정 (#52)

* feat: spring Batch 스키마 자동 생성 설정 추가 (#54)

* [Weather] 위치 기반 현재 날씨 조회 기능 구현 (#47)

* chore: 캐시 관련 설정 추가

* feat: 캐시 설정 추가 (CacheConfig 파일 생성)

* feat: 위도, 경도를 기상청 API가 요구하는 좌표계로 변환하는 로직 추가

* feat: 기상청 기준시각 유틸 추가

* test: 기상청 기준시각 유틸 테스트 추가

* feat: WeatherController 생성

* feat: WeatherResponse dto 생성

* feat: WeatherService 생성

* test: WeatherController의 단위테스트 추가

* chore: 기상청 Url 환경설정 추가

* fix: 띄어쓰기, 매개변수 오타 수정

* chore: Restclient timeout 15초로 늘림

* fix: buildUrl 메서드에서 ServiceKey를 쿼리 파라미터 대신 문자열로 직접 추가

* test: minusHousr 함수의 세 번째 인자 제거

* test: WeatherControllerTest 수정

* fix: 중복된 타임아웃 설정 제거 및 Url 설정 이동

* refactor: ServiceKey의 외부 노출을 피하기 위해 URI 사용 로직으로 변경

* refactor: Cache 관련 설정을 application.properties로 이동

* test: KmaGrid 테스트 추가

* refactor: KMA 응답을 기존 Map 사용 단계적 캐스팅에서 DTO로 역직렬화 하는 방법으로 변경

* refactor: 변수명 직관적으로 변경

* chore: 중복 선언된 설정 삭제

* refactor: 사용하지 않는 메서드 삭제

* refactor: 사용 중이던 메서드 복구

* refactor: 기상청 응답 성공 코드 상수화

* [Shelter] Shelter OpenAPI Mock 클라이언트 도입 및 모드 전환(real/mock) (#56)

* feat: OpenAPI Mock 클라이언트 추가 및 더미 폴백 구현

* refactor: 실 클라이언트에 ConditionalOnProperty(real) 적용

* test: MockShelterOpenApiClient 유닛 테스트 작성

* test: ShelterOpenApiClient(real, mock) 통합 테스트 작성

* chore: application.properties 섹션화 및 정리

* fix: 로컬 실행 시 mock이 동작하도록 변경

* [Wish] 찜(Wish) CRD 구현 (#58)

* feat: Wish 도메인 구현

* feat: Wish 레포지토리 구현

* feat: Wish DTO 구현

* feat: Wish service, controller 구현

* feat: Wish 커스텀 예외 처리

* feat: Wish domain, repository, service, controller 테스트 구현

* refactor: @AuthenticationPrincipal(expression="user")로 일관화

* 앱 푸시 구현 (#57)

* feat: Firebase 서비스 계정 키 등록

* feat: Firebase Admin SDK 의존성 추가

* feat: 앱 푸시 구현

* fix: registerUserDevice 응답 형식 변경 (ok -> created)

* fix: 취약한 종속성 해결

* test: PushNotificationService 테스트 코드 작